Salesforce/main/default/main/default/objects/Anuncio__c/Anuncio__c.object-meta.xml
<CustomObject>
    <description>Anúncio utilizado para o projeto de Clearing - Conecta Sementes</description>
    <label>Anúncio</label>
    <nameField>
        <label>Nome de Anúncio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anúncios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>