Salesforce/main/default/main/default/objects/Anuncio__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>15</length>
    <type>Text</type>
</CustomField>