Salesforce/main/default/main/default/objects/Anuncio__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <length>150</length>
    <type>Text</type>
</CustomField>