Salesforce/main/default/main/default/objects/Anuncio__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anúncios</relationshipLabel>
    <relationshipName>Anuncios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>