Salesforce/main/default/main/default/objects/Anuncio__c/fields/Data_Anuncio__c.field-meta.xml
<CustomField>
    <fullName>Data_Anuncio__c</fullName>
    <label>Data Anúncio</label>
    <type>DateTime</type>
</CustomField>