Salesforce/main/default/main/default/objects/Anuncio__c/fields/Data_Ini_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Ini_Cotacao__c</fullName>
    <label>Data Ini Cotação</label>
    <type>DateTime</type>
</CustomField>