Salesforce/main/default/main/default/objects/Anuncio__c/fields/Embalagem__c.field-meta.xml
<CustomField>
    <fullName>Embalagem__c</fullName>
    <label>Embalagem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>