Salesforce/main/default/main/default/objects/Anuncio__c/fields/Forma_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_Pagamento__c</fullName>
    <label>Forma Pagamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>