Salesforce/main/default/main/default/objects/Anuncio__c/fields/ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>ID_Externo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>