Salesforce/main/default/main/default/objects/Anuncio__c/fields/Motivo_Encerrado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Encerrado__c</fullName>
    <label>Motivo Encerrado</label>
    <type>TextArea</type>
</CustomField>