Salesforce/main/default/main/default/objects/Anuncio__c/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negócio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra</fullName>
            </value>
            <value>
                <fullName>Venda</fullName>
            </value>
            <value>
                <fullName>Troca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>