Salesforce/main/default/main/default/objects/Anuncio__c/fields/Valor_Royalties__c.field-meta.xml
<CustomField>
    <fullName>Valor_Royalties__c</fullName>
    <label>Valor Royalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>