Salesforce/main/default/main/default/objects/Anuncio__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Variedade</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Anúncios</relationshipLabel>
    <relationshipName>Anuncios</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>