Salesforce/main/default/main/default/objects/Anuncio__c/fields/Vigor_48__c.field-meta.xml
<CustomField>
    <fullName>Vigor_48__c</fullName>
    <label>Vigor 48</label>
    <length>15</length>
    <type>Text</type>
</CustomField>